--- a/jobs/templates/layout.html
+++ b/jobs/templates/layout.html
@@ -1,4 +1,4 @@
-{% from 'macros.html' import show_job, show_jobs with sontext %}
+{% from 'macros.html' import show_job, show_jobs with context %}
 <!doctype html>
 <html>
   <head>
