--- a/jobs/templates/_macros.html
+++ b/jobs/templates/_macros.html
@@ -18,9 +18,9 @@
 {% endmacro %} 
 
 {% macro show_jobs(jobs) %}
-<div class="columns is-multiline">
+<div class="column is-multiline">
     {% for job in jobs %}
-        <div class="columns is-half">
+        <div class="column is-half">
             {{ show_job(job) }}
         </div>
     {% endfor %}
